3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Fix bug #1671102: Generic destroy can remove permanent buttons. The code was
 doing a wrong check related to marked item/destroyer.
Fix bug #1657675: multi-tile buildable object bug (note: one .x11 image though).
 code now uses multi-tile aware function to generate object, and correctly
 checks all relevant spots for building.
 server/build_map.c
---
plugins/template/create_plugin.sh: plugin generation script.
plugins/template/include/plugin_template.h: remove unused file, fix comment.
---
Give access to random map generation to plugins.
 include/sproto.h
 server/plugins.c
---
Allow one to give a prebuilt layout (.#<> and such) for random map generation.
 random_maps/random_map.c rproto.h standalone.c
 server/server.c
---
plugins/template/plugin_template.c: use cf_log instead of printf, fix missing
 CF_PLUGIN (Win32 specific).
---
server/c_object.c: missing ;, missing buffer reinitialisation.
server/login.c: wrong function call.
---
lib/races: remove obsolete player races.
lib/treasures: remove lists put into individual .trs files.
Nicolas Weeger 2007-03-17

types/Makefile.am: Build object files in their own directories instead of in types/
---
server/login.c: Make error messages for invalid usernames more useful.
---
server/c_object.c: Change examine to use "Those are" instead of "That is" for
   more than one object.
Alex Schultz 2007-03-16

Apply patch #1660388: Code-cleanup: () -> (void) courtesy Stefan Huehner.
 server/timers.c weather.c ob_methods.c
 test/unit/common/stubs_common.c
 test/unit/crossedit/stubs_crossedit.c
 test/unit/random_maps/stubs_random.c
 test/unit/socket/stubs_socket.c